--- a/paper/paper_PE.tex
+++ b/paper/paper_PE.tex
@@ -56,7 +56,7 @@
 \newcommand{\tfSPA}{t_{f}^{\rm SPA}}
 \newcommand{\TfSPA}{T_{f}^{\rm SPA}}
 \newcommand{\sYlm}{{}_{-2}Y_{\ell m}}
-\newcommand{\sYlmstar}{{}_{-2}Y_{\ell, -m}^{*}}
+\newcommand{\sYlmstar}{{}_{-2}Y_{\ell m}^{*}}
 \newcommand{\sYlminusmstar}{{}_{-2}Y_{\ell, -m}^{*}}
 
 \newcolumntype{C}[1]{>{\centering\arraybackslash}p{#1}}
@@ -385,8 +385,8 @@ We now translate the mode decomposition~\eqref{eq:hpcmodes} in the Fourier domai
 The mode decomposition~\eqref{eq:hpcmodes} gives (dropping $(\iota, \varphi)$)
 \bsub
 \begin{align}
-	h_{+} = \frac{1}{2} \sum_{\ell, m} \left( \sYlm h_{\ell, m} + \sYlmstar h_{\ell, m}^{*} \right) \,,\\
-	h_{+} = \frac{i}{2} \sum_{\ell, m} \left( \sYlm h_{\ell, m} - \sYlmstar h_{\ell, m}^{*} \right) \,,
+	h_{+} = \frac{1}{2} \sum_{\ell, m} \left( \sYlm h_{\ell m} + \sYlmstar h_{\ell m}^{*} \right) \,,\\
+	h_{\times} = \frac{i}{2} \sum_{\ell, m} \left( \sYlm h_{\ell m} - \sYlmstar h_{\ell m}^{*} \right) \,,
 \end{align}
 \esub
 which is valid in general. Now, for non-precessing binary systems, an exact symmetry relation between modes reads
