Added plotting notebook and plots

--- a/paper/paper_PE.tex
+++ b/paper/paper_PE.tex
@@ -72,9 +72,9 @@
 \author{John G. Baker}
 \affiliation{Gravitational Astrophysics Laboratory, NASA Goddard Space Flight Center, 8800 Greenbelt Rd., Greenbelt, MD 20771, USA}
 \author{Sylvain Marsat}
-\affiliation{Department of Physics, University of Maryland, College Park, MD 20742, USA}
+\affiliation{APC, AstroParticule et Cosmologie, Universit\'{e} Paris Diderot, CNRS/IN2P3, CEA/Irfu, Observatoire de Paris, Sorbonne Paris Cit\'{e}, 10, rue Alice Domon et L\'{e}onie Duquet 75205 PARIS Cedex 13, France}
+\author{Tito Dal Canton}
 \affiliation{Gravitational Astrophysics Laboratory, NASA Goddard Space Flight Center, 8800 Greenbelt Rd., Greenbelt, MD 20771, USA}
-\affiliation{Max Planck Institute for Gravitational Physics (Albert Einstein Institute), Am M\"uhlenberg 1, Potsdam-Golm, 14476, Germany}
 
 
 \date{\today}
@@ -685,6 +685,13 @@ where $\Lambda$ appears as an overall normalization factor, playing the role of 
 \subsection{A non-degenerate case}
 \label{sec:SMBHPEnondeg}
 
+\begin{figure*}
+  \centering
+  \includegraphics[width=.98\linewidth]{../plots/corner_smbh_case0_ptmcmc_22_hm.png}
+  \caption{.}
+  \label{fig:PEsmbh22hmCase0}
+\end{figure*}
+
 -- High-mass system, non-degenerate, 22 and HM + Fisher - stacked SNR contours
 eg:
 
@@ -706,10 +713,19 @@ Case 0
 \subsection{SNR dependence of parameter estimation}
 \label{sec:SMBHPEdistance}
 
+-- Move to Appendix ?
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Highlighting degeneracies}
 \label{sec:SMBHPEdegen}
+
+\begin{figure*}
+  \centering
+  \includegraphics[width=.98\linewidth]{../plots/corner_smbh_case9_ptmcmc_22_hm.png}
+  \caption{.}
+  \label{fig:PEsmbh22hmCase0}
+\end{figure*}
 
 - Highlighting degeneracies
 
